--- a/themestart/base.html
+++ b/themestart/base.html
@@ -2,5 +2,6 @@
 
 {% block extrastyles %}
   {{ supper }}
+  <link href="{{ THEME_MEDIA_URL }}css/default.css" rel="stylesheet" type="text/css" />
   <link href="{{ THEME_MEDIA_URL }}css/layout.css" rel="stylesheet" type="text/css" />
 {% endblock %}
